# src/controller/auth.controller.ts
@@ -24,7 +24,23 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 character")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one Uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not match"),
@@ -32,6 +48,10 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     */
+
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister; // Extract request body data to TRegister
 
@@ -68,6 +88,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+    #swagger.tags = ['Auth']
     #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -85,6 +106,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true
       });
 
       if (!userByIdentifier) {
@@ -106,9 +128,9 @@ export default {
       }
 
       const token = generateToken({
-        id: userByIdentifier._id, 
-        role: userByIdentifier.role
-      })
+        id: userByIdentifier._id,
+        role: userByIdentifier.role,
+      });
 
       res.status(200).json({
         message: "Login Success",
@@ -125,18 +147,19 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+    #swagger.tags = ['Auth']
     #swagger.security = [{
       "bearerAuth": []
     }]
      */
     try {
       const user = req.user;
-      const result = await UserModel.findById(user?.id)
+      const result = await UserModel.findById(user?.id);
 
       res.status(200).json({
         message: "Success get user profile",
-        data: result
-      })
+        data: result,
+      });
     } catch (error) {
       const err = error as unknown as Error;
       res.status(400).json({
@@ -144,5 +167,40 @@ export default {
         data: null,
       });
     }
-  }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/ActivationRequest"}
+    }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "User Successfully Activated",
+        data: user,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
 };
